<resources>
    <string name="app_name">ApalonTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_search">Search</string>
    <string name="title">Title:</string>
    <string name="text">Text:</string>
    <string name="menu_item_delete">Delete</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the selected notes?</string>
    <string name="hint_password">Password</string>
    <string name="submit_btn_text">Submit</string>
    <string name="menu_item_notes">Notes</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="main_settings_header">Main</string>
    <string name="settings_category_main">Main Settings</string>
    <string name="settings_lock_title">Lock</string>
    <string name="settings_lock_summary">Request password on start</string>
    <string name="settings_password_title">Password</string>
    <string name="settings_password_summary">Default password is \'pass\'</string>
    <string name="note_activity_title">Edit</string>
    <string name="header_main_text">Notes</string>
    <string name="header_summary">Apalon Test</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_category_about">About</string>
    <string name="widget_name">New note</string>
    <string name="menu_item_by_title">By title</string>
    <string name="menu_item_by_text">By text</string>
    <string name="menu_item_by_date">By date</string>
    <string name="menu_item_sort">Sort</string>
</resources>
