<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_item_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />

    <item
        android:id="@+id/menu_item_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_item_sort"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single"
                   android:id="@+id/menu_sortings">
                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/menu_item_by_title" />
                <item
                    android:id="@+id/sort_by_text"
                    android:title="@string/menu_item_by_text" />
                <item
                    android:id="@+id/sort_by_date"
                    android:title="@string/menu_item_by_date" />
            </group>

        </menu>
    </item>

</menu>